themes/r3fi/src/style/main.scss
$fa-font-path: "../webfonts";

$grid-gutter-width: 60px;

@import "variables";

$primary: #2cacb5; // $r3fi-bg-dark;
$secondary: $r3fi-bg-tertiary;

@font-face {
  font-family: "Sukar Black";
  src: url("../webfonts/Sukar-Black.woff");
}

@import "../../node_modules/bootstrap/scss/bootstrap";


@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
@import "../../node_modules/@fortawesome/fontawesome-free/scss/solid";

@import "variables";

body {
  color: $r3fi-text-light;
  font-family: 'Monserrat', sans-serif;
}

h1, h2, h3, h4 {
  color: $r3fi-text-light;
  font-weight: bold;
}

h1 {
  font-size: 1.5em;
  text-transform: uppercase;
}

.r-bg--dark {
  background-color: $r3fi-bg-dark;
  color: $r3fi-text-light;

}

.r-bg--patterned {
  background-image: url("../images/gplay.png");
  background-attachment: fixed;
}

.r-bg--secondary {
  background-color: $r3fi-bg-secondary;
  color: $r3fi-text-light;
}

.r-bg--light {
  background-color: $r3fi-bg-light;
  color: $r3fi-body-text-colour;


  h1, h2, h3, h4 {
    color: #000;
    font-weight: bold;
  }

}

.r3fi-ticker {
  font-weight: bold;
  color: $r3fi-colour-secondary;
}

.main-nav {
  color: #FFF;
  transition: background-color .2s linear;

  &--dark {
    background-color: $r3fi-bg-dark;
  }

  a, .navbar-toggler {
    color: #FFF;
  }
}

.block-hero {
  display: flex;
  align-items: center;

  flex-direction: column;

  > div {
    margin-top: 1em;
    margin-bottom: 1em;
  }
}

.block-summary {
  text-align: center;

  h1 {
    color: $r3fi-text-light;
    font-size: 2em;
  }

  color: $r3fi-text-light;
}


.block-features {
  ul {
    list-style: none;
    font-size: 1.3em;
    display: inline-block;

    li {
      margin: .2em 0;

      & + .fas {
        margin-right: .5em;
      }
    }
  }
}

.btn-icon {

  &__icon {
    width: 32px;
    height: 32px;
    margin-right: .5em;

    &--badge-white {
      background-color: #FFF;
      border-radius: 50%;
      padding: 3px;
    }
  }

  span {
    vertical-align: text-top;
  }
}

.hero-links {
  background: $r3fi-bg-secondary;

  ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 1em 0;
    flex: 1 1 0;
    justify-content: space-around;
    align-items: center;
  }

  &__link {
    color: $r3fi-text-light;
    text-decoration: none;
    padding: .5em;

    &:hover {
      text-decoration: none;
      color: $r3fi-text-light;

      span {
        text-decoration: underline;
      }
    }
  }

  @include media-breakpoint-down(md) {
    &__link {
      span {
        display: none;
      }
    }
  }

}

.r3fi-glow-wrapper {
  white-space: nowrap;
}

.r3fi-glow {
  display: inline-block;
  animation: r3fi-glow 1s ease-in-out infinite alternate;

  &--cocked {
    transform: rotate(10deg) translateY(5px);
    font-size: 1.5em;
  }
}

@keyframes r3fi-glow {
  from {
    text-shadow: 0 0 14px $r3fi-colour-secondary, 0 0 14px #f5a2eb;
    color: #FFF;
  }

  to {
    text-shadow: 0 0 1px $r3fi-colour-secondary, 0 0 5px #f5a2eb;
    color: #f5a2eb;
  }
}

.txCounter {
  text-align: right;

  .txCounter__count {
    margin: 1em 0 .5em;
    font-size: 2em;
  }
}

.card--pop {
  background-color: lighten($r3fi-bg-tertiary, 25%);
  border: none;
  align-self: center;

  h1 {
    color: $r3fi-bg-dark;
    font-family: "Sukar Black", Georgia, serif;
    font-size: 1.2em;
  }

  p:last-child {
    margin-bottom: 0;
  }

  @include media-breakpoint-down(md) {
    & {
      border-radius: 0;
    }
  }
}

